Bug 1024860 - getTotalLength on an empty path should not throw but return 0 instead. r=jwatt,bzbarsky